--- a/templates/patients_add.html
+++ b/templates/patients_add.html
@@ -26,7 +26,7 @@
 
     <div class="col-lg-4 text-left">
 
-        <form action="/patients_add" method="post">
+        <form action="/patients_add" method="post" autocomplete="off">
             <input type="text" name="name" id="name"
                 class="form-control border border-primary {{'border-danger' if 'name' in empty_fields }}"
                 placeholder="Имя">
