--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <h3 class="display-5 fw-bold text-body-emphasis text-center">Логин</h3>
     <br />
     <div class="col-lg-4 mx-auto">
-        <form action="/login" method="post">
+        <form action="/login" method="post" autocomplete="off">
             <input type="text" name="email" id="email" class="form-control border border-primary" placeholder="Электронная почта" />
             {% if "email" in empty_fields %}
                 <div class="error-form-field">Заполните электронную почту</div>
